<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->
    <string name="app_name">Stolen Phone Recovery</string>
    <string name="on_button">Activate</string>
    <string name="off_button">Deactivate</string>
    
    <string name="lspr_device_admin">App/Device Admin</string>
    <string name="app_label">Stolen Phone Recovery</string>
    <string name="app_description">An app that helps recover stolen phones.</string>
        
	<!-- Settings -->
	<string name="lspr_settings">Settings</string>
    <string name="setting_txt">Setting</string>
    <string name="rst_pw_txt">Reset Password</string>
    <string name="max_failed_pw1_txt">Max failed password attempt to trigger camera and GPS services</string>
    <string name="often_txt">How often would you like us to send you GPS location once stolen?</string>
    <string name="often_prompt">Choose a duration</string>
    <string-array name="durations">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string name="dm_txt">Delivery</string>
    <string name="email_txt">Email:</string>
    <string name="prompt_email_txt">email address</string>
    <string name="prompt_emailpass_txt">email password</string>
    <string name="prompt_emailpassv_txt">      (again)</string>
    <string name="text_txt">Text</string>
    <string name="web_txt">Website</string>
    <string name="email_pass">Password:</string>
    <string name="activate_txt">Activate</string>
    <string name="field_empty_warning">Please enter value in all fields</string>
    <string name="password_dont_match">Passwords do not match.</string>
    <string name="email_invalid">Invalid email</string>
    <string name="invalid_attempts_value">Max Failed Password Attempt for Data Wipe must be strictly greater than Max Failed Password Attempt for Service</string>
    
    <!-- Welcome Page -->
    <string name="lspr_welcome">Welcome Screen</string>
    <string name="welcome_title_txt">Welcome!</string>
    <string name="welcome_message_txt">Stolen Phone Recovery is an app that aims to recover stolen phones by capturing the thief\'s picture and GPS location, which are then sent to an email designated by you. Please complete this setup to start using this app.</string>
    <string name="welcome_next_txt">Let\'s get started!</string>
    
    <!-- Enable Admin Page -->
    <string name="eap_title_txt">Enable Admin(Step 1)</string>
    <string name="eap_message_txt">To allow this app to monitor unlock attempts, please enable administrator role for this app.</string>
    <string name="eap_next_txt">Enable Admin</string>
    <string name="lspr_enable_admin">Enable Admin Screen</string>
    
    <!-- Enable Location Page -->
    <string name="elp_title_txt">Enable Location(Step 2)</string>
    <string name="elp_message_txt">To allow this app to track its location, please make sure all location services are checked and hit back when you\'re done.</string>
    <string name="elp_next_txt">Enable Location</string>
    <string name="lspr_enable_location">Enable Location Screen</string>
    
    <!-- Set New Password Page -->
    <string name="snp_title_txt">Set New Password(Step 3)</string>
    <string name="snp_message_txt">To strengthen security, please set a new password for your device.</string>
    <string name="snp_next_txt">Set New Password</string>
    <string name="lspr_set_new_password">Set New Password Screen</string>
    
    <!-- Configure Page -->
    <string name="cp_title_txt">Configure(Step 4)</string>
    <string name="cp_message_txt">You\'re almost there! Please continue to configure the core settings for this app.</string>
    <string name="cp_next_txt">Next</string>
    <string name="lspr_configure">Configure screen</string>
    
    <!-- Unlock Monitor and Device Admin -->
    <string name="lspr_unlock_monitor_service">Device Admin and Unlock Monitor Service</string>
    <string name="lspr_camera_gps_service">Camera and GPS Service</string>
    
    <!-- Lock Pattern Util -->
    <string name="lockscreen_return_to_call">Lockscreen return to call</string>
    <string name="lockscreen_emergency_call">Lockscreen emergency call</string>

</resources>