<?xml version="1.0" encoding="utf-8"?>
<!--

  author :thomasloh
  date: Feb 12
  Description: Enable Admin screen
  
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|left|right"
    android:orientation="vertical"
    android:padding="4dip" >

    <TextView
        android:id="@+id/settingName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/elp_title_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="175330.36" >

        <Button
            android:id="@+id/elp_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="48dp"
            android:text="@string/elp_next_txt" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="106dp"
            android:text="@string/elp_message_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>