<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Demonstrates implementation of a DeviceAdmin. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|left|right"
    android:orientation="vertical"
    android:padding="4dip" >

    <TextView
        android:id="@+id/settingName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/setting_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="75dp" >

        <Button
            android:id="@+id/setPw"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/rst_pw_txt" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0" >

        <EditText
            android:id="@+id/max_failed_pw1_input"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:inputType="number" />

        <TextView
            android:id="@+id/max_failed_pw1_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/max_failed_pw1_txt" android:layout_toLeftOf="@+id/max_failed_pw1_input"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout03"
        android:layout_width="312dp"
        android:layout_height="70dp"
        android:layout_weight="0" >

        <EditText
            android:id="@+id/max_failed_pw2_input"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/max_failed_pw2_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/max_failed_pw2_input"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/max_failed_pw2_input"
            android:text="@string/max_failed_pw2_txt" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top" >

        <TextView
            android:id="@+id/dm_txt"
            android:layout_width="310dp"
            android:layout_height="30dp"
            android:text="@string/dm_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:addStatesFromChildren="true"
        android:background="@android:drawable/edit_text"
        android:gravity="center_vertical"
        android:paddingRight="0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_txt"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?android:attr/textColorSecondary" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="true"
        android:background="@android:drawable/edit_text"
        android:gravity="center_vertical"
        android:paddingRight="0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_pass"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="?android:attr/textColorSecondary" />

        <EditText
            android:id="@+id/emailPassInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5.45" android:paddingTop="17dp">

        <Button
            android:id="@+id/activateBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/activate_txt"/>

    </RelativeLayout>

</LinearLayout>